--- a/Frontend/sevenspace/src/components/css/SignIn.css
+++ b/Frontend/sevenspace/src/components/css/SignIn.css
@@ -82,3 +82,15 @@
     transform: scale(1.1);
     transition: transform 0.2s;
 }
+
+.SignIn_Extra_Options {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+  }
+  
+  .SignIn_Extra_Options .Hover_Effect {
+    font-size: 14px;
+  }
+  
