--- a/Frontend/sevenspace/src/components/css/Property.css
+++ b/Frontend/sevenspace/src/components/css/Property.css
@@ -91,7 +91,7 @@ h1 {
   font-weight: bold;
   color: #333;
   text-align: center;
-  background-color: #f8f9fa;
+  background-color: white;
 }
 
 /* Responsive */
